tests/parse_print/issues/363/2/stderr.expected
Error:
    Parser error in file: tests/parse_print/issues/363/2/363_2.essence Error is:
ValidatorError tests/parse_print/issues/363/2/363_2.essence:2:29:
  |
2 | find S : set of int(-10..0) union int(0..10)
  |                             ^^^^^^^^^^^^^^^^
Skipped tokens
